tests/paczka1/fuzzy1/96371091.err
Error in line 3: Ii4M S140 42,7
Error in line 5: 2mhkZAX3 S529 73,1
Error in line 10: wOR S140 47,65
Error in line 14: S140 SD29 97,3
Error in line 16: S140 S529 -4,1
Error in line 11: S140 A63 19,9
Error in line 24: gg2061 S529 64,2
